test/parser/Queries/syntax_errors/fail_K-ForExprWithout-28.xq
 for (:********* eq **************** let **** where ****** ne *foo***** let ****** $ ******:)
(: Test: K-ForExprWithout-28   let       $     let  foo eq      foo      for     for      $ :)
(: Written by: Fransfoo Englich                foo          where   where   :)
(: Date: 2006-10-05T18:29:37+02:00    for             let   where     where   eq    :)
(: Purpose: Variable which is not in scope.        foo      :)
(: for ************** ne **************************************:
$xs:NOTEXIST